--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="5337993c-d396-425b-b178-39494e9dca7a"  type="text/javascript"></script>
   </body>
 </html>
