--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Fahrschule Am Gymnasium - Keep cool and get lässig! Mit Freude und Spaß bringen wir Dich zu Deinem lang ersehnten Ziel - Deinem Führerschein!">
     <title>Fahrschule Am Gymnasium</title>
+    <!-- Start cookieyes banner --> 
+    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/9428bba33c98997735bc1824/script.js"></script>
+    <!-- End cookieyes banner -->
   </head>
   <body>
     <div id="root"></div>
