--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <!-- Start cookieyes banner --> 
     <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/9428bba33c98997735bc1824/script.js"></script>
     <!-- End cookieyes banner -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GXBVGKKN45"></script>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GXBVGKKN45');
+    </script>
   </head>
   <body>
     <div id="root"></div>
